--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "meshline": "^3.3.1",
+    "motion": "^12.23.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
